# HueMaster

./: CMakeLists.txt  LICENSE  README.md
include/: color.h  color_scheme.h  configurator.h  image.h  parser.h  writer.h
src/: color.cpp  color_scheme.cpp  configurator.cpp  image.cpp  main.cpp  parser.cpp  writer.cpp
